istio/gw-podinfo-aws.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: podinfo-aws
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
    - hosts:
        - podinfo.aws.k8gb.io
      port:
        name: http
        number: 8080
        protocol: http
