istio/gw-podinfo-cloud.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: podinfo-cloud
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
    - hosts:
        - podinfo.cloud.k8gb.website
      port:
        name: http
        number: 80
        protocol: http
