istio/gw.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: podinfo
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - podinfo.cloud.k8gb.io
      port:
        name: http
        number: 8080
        protocol: http
